[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccxt"
version = "4.5.17"
description = "Modified CCXT with Lighter Exchange Support"
readme = "README.md"
authors = [{name = "oliuStudio"}]
license = "MIT"
requires-python = ">=3.8"
dependencies = ["requests"]

[tool.setuptools]
packages = ["ccxt"]
